--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,9 +96,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	gap: 42px;
-	font-size: 16px;
-	font-weight: 700;
-	color: #00251A;
 }
 .logo {
 	width: 151px;
@@ -107,6 +104,20 @@ body {
 	text-indent: 101%;
 	overflow: hidden;
 	white-space: nowrap;
+}
+.header li a {
+	text-decoration: none;
+	font-size: 16px;
+	font-weight: 700;
+	color: #00251A;
+	padding: 2px 3px;
+}
+.header li a:hover{
+	background-color: #00251A;
+	color: #fff;
+	border-radius: 5px;
+	padding: 2px 3px;
+	transition: 0.7s;
 }
 
 /* background */
@@ -121,8 +132,6 @@ body {
 	padding: 152px 25%;
 	margin-bottom: 60px;
 }
-
-
 .main-section {
 	margin: 0 auto;
 	width: 50%;
@@ -137,10 +146,16 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: start;
+	align-items: center;
 	border-radius: 5px;
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.16);
 	margin-bottom: 60px;
+	width: 33.3%;
+	line-height: 1.2;
+}
+.img-icon {
+	max-width: 100%;
+	max-height: 100%;
 }
 .title-icon {
 	font-size: 20px;
@@ -155,6 +170,104 @@ body {
 	font-weight: 700;
 	padding: 43px 20px 12px 20px;
 }
-.text-icon3 {
+.list-icon3 {
+	list-style-type: disc;
+}
+
+/* 比較表格區域 */
+.compare-table{
+	width: 100%;
+	margin: 0 auto;
+	margin-bottom: 60px;
+}
+.compare-table th, .compare-table td {
+	border-top: 1px solid #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
 	text-align: left;
+	padding: 6px 0;
+}
+.title-table {
+	font-size: 24px;
+	font-weight: 700;
+	text-align: center;
+	padding-bottom: 24px;
+}
+.table-header {
+	font-weight: 700;
+}
+.marked {
+	font-weight: 700;
+	color: #00CC99;
+}
+
+/* 表單問卷區域 */
+.survey {
+	background:linear-gradient(#E4FFF8, #A2DDCE)
+}
+.title-survey {
+	font-size: 24px;
+	font-weight: 700;
+	text-align: center;
+	padding: 36px 0 28px 0;
+}
+.survey-area {
+	width: 50%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+
+}
+.info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: start;
+}
+.info label {
+	padding-bottom: 8px;
+}
+.info input {
+	margin-bottom: 16px;
+}
+.text-area {
+	display: flex;
+	flex-direction: column;
+}
+.text-area label {
+	padding-bottom: 8px;;
+}
+.button-submit {
+	display: flex;
+	justify-content: center;
+	padding: 41px 0 46px;
+}
+.button-submit button {
+	width: 159px;
+	height: 38px;
+	border-radius: 3px;
+	border: 1px solid #00251A;
+	background: #00251A;
+	color: #FFFFFF;
+	text-align: center;
+}
+.button-submit button:hover {
+	cursor: pointer;
+}
+
+/* Footer */
+.footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 50%;
+	margin: 0 auto;
+	padding: 22px 0;
+}
+.footer a {
+	text-decoration: none;
+}
+.contact-info {
+	color: #00CC99;
 }
